--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
 			<button>Clear All</button>
 		</div>
 	</div>
+	<script>
+		var input = document.getElementById("myInput");
+		input.addEventListener("keyup", function (event) {
+			if (event.keyCode === 13) {
+				event.preventDefault();
+				document.getElementById("myBtn").click();
+			}
+		});
+	</script>
 
 </body>
-
 </html>
