--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src='script.js' defer></script>
 	<title>Lab 04</title>
-	<!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
+	<link rel="stylesheet" href="style.css">
+	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<<<<<<< HEAD
 <body class="">
 	<div class="box">
 		<!-- <header class="pb-2 ct my-7 mx-28">Minimal Todo List</header> -->
@@ -42,11 +42,5 @@
 		});
 	</script>
 
-=======
-<body>
-	<h1>Minimal Todo List</h1>
-	<input  type='text'>
-	<button>+</button>
->>>>>>> parent of 092010a (outline)
 </body>
 </html>
