--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		</div>
 
 		<!-- clearAll -->
-		<div class="clearAll">
+<!-- 		<div class="clearAll">
 			<button>Clear All</button>
-		</div>
+		</div> -->
 	</div>
 	
 </body>
